Dark Mode: Fixed setting labels missing dark mode handling
Fixes #5018

--- a/resources/sass/_forms.scss
+++ b/resources/sass/_forms.scss
@@ -321,6 +321,7 @@ input[type=color] {
   }
 }
 .setting-list-label {
+  @include lightDark(color, #222, #DDD);
   color: #222;
   font-size: 1rem;
 }
